--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
- 
-<head>
-    <title>Passport with Sequelize</title>
-</head>
- 
-<body><p><a href="/admin/logout">logout</a></p>
+<p><a href="/admin/logout">logout</a></p>
     <h2>Dashboard</h2>
     <h5>Hurray! you are logged in.</h5>
  
-</body>
- 
-</html>
