--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -277,7 +277,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="/admin/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         
                         <li>
@@ -298,6 +298,9 @@
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="/admin/createweb">create website</a>
+                                </li>
+                                <li>
+                                    <a href="/admin/listweb">list website</a>
                                 </li>
                                
                             </ul>
