--- a/views/admin/createweb.hbs
+++ b/views/admin/createweb.hbs
@@ -1,32 +1,14 @@
+<form role="form" method="post" action="/admin/createweb">
 
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <div class="login-panel panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
-                    </div>
-                    <div class="panel-body">
-                        <form id="signin" name="signin" method="post" action="signin">
-                            <fieldset>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                    </label>
-                                </div>
-                                
-                                <input type="submit" class="btn btn-lg btn-success btn-block" value="Login">
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="form-group">
+        <label>website name{{email}}</label>
+        <input class="form-control" title="abc.com" placeholder="please enter domain name" name="webname">
     </div>
+    <button type="submit" class="btn btn-default">Submit Button</button>
+
+
+
+
+
+    <button type="reset" class="btn btn-default">Reset Button</button>
+</form>
