--- a/views/admin/signup.hbs
+++ b/views/admin/signup.hbs
@@ -1,23 +1,34 @@
-<!DOCTYPE html>
-<html>
- 
-<head>
-    <title></title>
-</head>
- 
-<body>
-    <form id="signup" name="signup" method="post" action="/admin/signup">
-        <label for="email">Email Address</label>
-        <input class="text" name="email" type="email" />
-        <label for="firstname">Firstname</label>
-        <input name="firstname" type="text" />
-        <label for="lastname">Lastname</label>
-        <input name="lastname" type="text" />
-        <label for="password">Password</label>
-        <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign Up" />
-    </form>
- 
-</body>
- 
-</html>
+<!-- /.row -->
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Basic Form Elements
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                      <form id="signup" name="signup" method="post" action="/admin/signup">
+
+                            <div class="form-group">
+                                <label>Email Address</label>
+                                <input class="form-control" placeholder="Enter email here" name="email">
+                            </div>
+                              <div class="form-group">
+                                <label>Firstname</label>
+                                <input class="form-control" placeholder="Enter text" name="firstname">
+                            </div>
+                              <div class="form-group">
+                                <label>Lastname</label>
+                                <input class="form-control" placeholder="Enter text" name="lastname">
+                            </div>
+                              <div class="form-group">
+                                <label>Password</label>
+                                <input class="form-control" placeholder="Enter text" name="password" type="password">
+                            </div>
+                            
+
+                            <button type="submit" class="btn btn-default">Submit Button</button>
+                            <button type="reset" class="btn btn-default">Reset Button</button>
+                        </form>
+                    </div>
